<resources>
    <string name="app_name">TO DO List </string>
    <string name="export">export</string>
    <string name="action_settings">sort</string>
    <string name="az">A-Z</string>
    <string name="za">Z-A</string>
    <string name="priority">priority</string>
    <string name="deadline">deadline</string>
    <string name="status">status</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
    <string name="save">Save</string>
</resources>
