<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ShowTaskActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="8"
        app:layout_constraintBottom_toTopOf="@+id/imageButton_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/title_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/task_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/priority_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/low"
                    android:textColor="#4CAF50" />

                <RadioButton
                    android:id="@+id/medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:text="@string/medium"
                    android:textColor="#FF9800" />

                <RadioButton
                    android:id="@+id/high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:text="@string/high"
                    android:textColor="#F44336" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <EditText
                android:id="@+id/description_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/task_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLength="2000"
                android:maxLines="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/deadline_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/task_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/creation_show"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/task_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text" />
        </TableRow>


    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton_show"
        android:layout_width="53dp"
        android:layout_height="41dp"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:onClick="viewAttachments"
        android:src="@drawable/attachment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>